# wgpu-renderer

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE-DECISIONS.md  CLAUDE.md  Cargo.toml  README.md
.agents/skills/webgpu-guide/references/: webgpu-fundamentals.md
.claude/: settings.json
.claude/agents/: graphics-research-guide.md
.githooks/: pre-commit
.github/workflows/: rust.yml  update-references.yml
.zed/: debug.json  settings.json
app/: Cargo.toml  build.rs
app/src/: application.rs  camera.rs  egui.rs  engine.rs  hierarchy.rs  lib.rs  lights.rs  main.rs  mesh.rs  rasterizer.rs  raytracer.rs  renderer.rs  scene.rs  shapes.rs  utils.rs  wgpu.rs
app/src/camera/: mod.rs
app/src/core/: application.rs  engine.rs  events.rs  flags.rs  mod.rs  renderer.rs  systems.rs
app/src/ecs/: mod.rs  scene.rs
app/src/input/: camera_controller.rs  mod.rs  systems.rs
app/src/lighting/: directional_light.rs  mod.rs
app/src/lighting/probe_lighting/: mod.rs  systems.rs  updater.rs  visualization.rs
app/src/material/: mod.rs
app/src/mesh/: gltf.rs  mod.rs  ply.rs  static_mesh.rs
app/src/probe_lighting/: visualization.rs
app/src/rendering/: bvh.rs  extract.rs  material.rs  mesh.rs  mod.rs  rasterizer.rs  raytracer.rs  renderable.rs  renderer.rs  systems.rs  tlas_bvh.rs  transform.rs  vertex.rs  wgpu.rs
app/src/rendering/bvh/: blas.rs  debug.rs  mod.rs  tlas.rs
app/src/rendering/rasterizer/: blit_to_screen.rs  mod.rs  shadow.rs
app/src/rendering/raytracer/: bvh.rs  mod.rs
app/src/rendering/wgpu/: buffers.rs  builders.rs  mod.rs  resources.rs  shader_sources.rs
app/src/rendering/wgpu_utils/: buffers.rs  mod.rs  resources.rs
app/src/shaders/: package.wesl  probe_lighting.wesl  rasterizer.wesl  raytracer.wesl  util.wesl  util.wgsl
app/src/shaders/probe_lighting/: updater.wesl  util.wesl  visualization.wesl
app/src/shaders/rasterizer/: blit_to_screen.wesl  main.wesl  main.wgsl  shadow_mapping.wesl
app/src/shaders/raytracer/: bvh_lines.wesl  compute.wesl  compute.wgsl  main.wgsl  render.wesl  render.wgsl  util.wesl
app/src/systems/: mod.rs  probe_baking_system.rs  render_system.rs  scene_system.rs  ui_system.rs
app/src/time/: mod.rs
app/src/transform/: mod.rs  systems.rs
app/src/ui/: egui.rs  mesh_hierarchy.rs  mod.rs  systems.rs
app/src/utils/: buffer_utils.rs  mod.rs
app/src/wgpu_utils/: mod.rs
app/tests/: basic.rs  headless.rs
assets/: cornell-box.glb  cornell-box.ply  cube.ply  emissive_floor.glb  sponza.glb
docs/: GLTF_COMPATIBILITY_PLAN.md
ecs/: Cargo.toml
ecs/src/: lib.rs
maths/: Cargo.toml
maths/src/: lib.rs
renderer/: Cargo.toml
renderer/src/: main.rs
renderer/src/shaders/: shader.wgsl
skills/skill-creator/: SKILL.md
skills/skill-creator/references/: output-patterns.md
skills/skill-creator/scripts/: package_skill.py  quick_validate.py
skills/webgpu-guide/: SKILL.md
skills/webgpu-guide/references/: wesl-guide.md  wgpu-rs-guide.md  wgsl-spec.md
static/: index.html
wgpu-renderer.vault/: Change Detection.md  Event Queue for Updating Render Data.md  Mesh Hierarchy UI.md
wgpu-renderer.vault/.obsidian/: community-plugins.json  hotkeys.json
wgpu-renderer.vault/.obsidian/plugins/harper/: data.json
wgpu-renderer.vault/.obsidian/plugins/obsidian-excalidraw-plugin/: data.json
wgpu-renderer.vault/Excalidraw/: MeshHierarchyCalculation1.excalidraw.md  change-detection-schedule.excalidraw.md
xtask/: Cargo.toml
xtask/src/: main.rs  run_wasm.rs
