[package]
name = "app"
version = "0.1.0"
edition = "2024"
default-run = "app"

[dependencies]
bytemuck = { version = "1.18.0", features = ["derive"] }
egui = "0.31"
egui-wgpu = "0.31"
gltf = { version = "1.4" }
log = "0.4.22"
maths = { path = "../maths" }
ply-rs = "0.1.3"
wgpu = "24"
winit = "0.30"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
egui-winit = "0.31"
env_logger = "0.11.5"
image = { version = "0.25.2", default-features = false, features = ["png"] }
pollster = "0.3.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
egui-winit = { version = "0.31", default-features = false }
fern = "0.6.2"
wgpu = { version = "24", features = ["webgpu"] }
wasm-bindgen = "=0.2.100"
wasm-bindgen-futures = "0.4.42"
web-sys = { version = "0.3.69", features = [
    "Location",
    "Blob",
    "RequestInit",
    "RequestMode",
    "Request",
    "ImageData",
    "Response",
    "HtmlImageElement",
    "WebGl2RenderingContext",
    "CanvasRenderingContext2d",
] }
web-time = "1.1"
