[package]
name = "wgpu-renderer"
version = "0.1.0"
edition = "2021"
default-run = "wgpu-renderer"

[dependencies]
egui = "0.28"
egui-wgpu = "0.28"
wgpu = "0.20"
winit = "0.29.15"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pollster = "0.3.0"
env_logger = "0.11.5"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
fern = "0.6.2"
wgpu = { version = "0.20", features = ["webgpu"] }
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
web-sys = { version = "0.3.69", features = [
    "Location",
    "Blob",
    "RequestInit",
    "RequestMode",
    "Request",
    "ImageData",
    "Response",
    "HtmlImageElement",
    "WebGl2RenderingContext",
    "CanvasRenderingContext2d",
] }
